# mlops_assignment

./: README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml
data/: housing_unique_values.xlsx
data/housing/: flat_model.csv  flat_types.csv  storey_range.csv  street_names_by_town.csv
models/: house-pipeline.pkl  house-pipeline2.pkl
notebooks/: Exploratory Data Analysis .ipynb  amber_mushroom.ipynb  housing_unique_values.xlsx  javerine_house.ipynb  mlops_assignment.ipynb  my_first_pipeline.pkl
notebooks/.ipynb_checkpoints/: Exploratory Data Analysis -checkpoint.ipynb  javerine_house-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
outputs/2024-08-18/16-20-51/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-21-10/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-21-30/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-21-48/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-22-00/.hydra/: hydra.yaml
outputs/2024-08-18/16-22-10/.hydra/: hydra.yaml
outputs/2024-08-18/16-22-25/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-30-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-30-59/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-18/16-31-32/.hydra/: hydra.yaml
src/: app.py
templates/: home.html  house_price_prediction.html  mushroom_poison_detector.html
templates/amber/: mlops_assignment.ipynb  mushroom_poison_detector.html
templates/includes/: navbar.html
(+209 files in other folders)
